--- a/weatherapp.css
+++ b/weatherapp.css
@@ -23,7 +23,14 @@ li {
   line-height: 1;
   list-style: none;
 }
-
+p {
+  color: #7c7c7c;
+  font-size: 13px;
+  font-weight: 50;
+  line-height: 28px;
+  margin: 0;
+  text-align: center;
+}
 .weather-app {
   border: 1px solid #dadde1;
   padding: 15px;
