--- a/weatherapp.css
+++ b/weatherapp.css
@@ -19,8 +19,7 @@ li {
   color: #7c7c7c;
   font-size: 16px;
   font-weight: 100;
-  height: 19px;
-  line-height: 1;
+  line-height: 19px;
   list-style: none;
 }
 p {
@@ -33,9 +32,9 @@ p {
 }
 .weather-app {
   border: 1px solid #dadde1;
-  padding: 15px;
-  margin: 20px auto;
-  border-radius: 10px;
+  padding: 20px;
+  margin: 30px auto;
+  border-radius: 5px;
   max-width: 600px;
 }
 
