--- a/weatherapp.css
+++ b/weatherapp.css
@@ -33,9 +33,11 @@ p {
 .weather-app {
   border: 1px solid #dadde1;
   padding: 20px;
-  margin: 30px auto;
   border-radius: 5px;
+}
+.weather-app-wrapper {
   max-width: 600px;
+  margin: 30px auto;
 }
 
 .weather-icon {
