edit wrapper css

--- a/weatherapp.css
+++ b/weatherapp.css
@@ -33,6 +33,11 @@ li {
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
+  color: #7c7c7c;
+  font-size: 13px;
+  font-weight: 50;
+  line-height: 28px;
+  text-align: center;
 }
 
 .weather-icon {
