--- a/weatherapp.css
+++ b/weatherapp.css
@@ -53,9 +53,23 @@ li {
 
 .units {
   position: relative;
+  font-size: 16px;
   top: -34px;
 }
 
 .search-form {
   margin-bottom: 20px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 1;
 }
