--- a/weatherapp.css
+++ b/weatherapp.css
@@ -70,7 +70,15 @@ li {
   width: 64px;
 }
 .weather-temperature strong {
+  color: black;
   font-size: 64px;
   font-weight: 400;
   line-height: 1;
+}
+.weather-temperature .active {
+  color: black;
+  cursor: default;
+}
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
